added $JAVA_BIN as param to building and running